--- a/index.html
+++ b/index.html
@@ -28,24 +28,120 @@
 		<div class="container">
 			<div class="row">
 				<div class="top-header clearfix">
-					<div class="col-md-3 col-sm-3"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i><span>+66 97 3412804</span></div>
-					<div class="col-md-3 col-sm-3"><i class="fa fa-skype fa-2x" aria-hidden="true"></i><span>villaonsamui</span></div>
-					<div class="col-md-3 col-sm-3"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i><span>rent@villaonsamui.ru</span></div>
-					<div class="col-md-2"><span><a href="">RU</a></span><span><a href="">ENG</a></span></div>
-					<div class="col-md-1"><a href=""><i class="fa fa-home fa-2x" aria-hidden="true"></i></a></div>
+					<div class="col-md-3 "><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i><span>+66 97 3412804</span></div>
+					<div class="col-md-3 "><i class="fa fa-skype fa-2x" aria-hidden="true"></i><span>villaonsamui</span></div>
+					<div class="col-md-3 "><i class="fa fa-envelope fa-2x" aria-hidden="true"></i><span>rent@villaonsamui.ru</span></div>
+					<div class="col-md-2 "><span><a href="">RU</a></span><span><a href="">ENG</a></span></div>
+					<div class="col-md-1 "><a href=""><i class="fa fa-home fa-2x" aria-hidden="true"></i></a></div>
 				</div>
-				<div class="bottom-header">
-					<div class="col-md-2">
+				<div class="bottom-header clearfix">
+					<div class="col-md-1">
 						<div class="logo"><img src="/img/logo.png" alt=""></div>
 					</div>
-					<div class="col-md-4">
-						<p>Аренда и продажа домов, вилл, апартаментов на Самуи.</p>
+					<div class="col-md-5">
+						<h1>Аренда и продажа домов, вилл, апартаментов на Самуи.</h1>
 					</div>
-					<div class="col-md-6"></div>
+					<div class="col-md-6">
+						<nav>
+							<ul>
+								<li><a href="">О нас</a></li>
+								<li><a href="">Аренда</a></li>
+								<li><a href="">Продажа</a></li>
+								<li class="button"><a href="#">Сопровождение на Самуи</a>
+									<ul class="inner-list">
+										<li><a href="">Аренда байка</a></li>
+										<li><a href="">Аренда авто</a></li>
+										<li><a href="">Экскурсии</a></li>
+										<li><a href="">Статьи</a></li>
+									</ul>
+								</li>
+								<li><a href="">Контакты</a></li>
+							</ul>
+						</nav>
+					</div>
 				</div>
 			</div>
 		</div>
 	</header>
+	<main>
+		<div class="container">
+			<div class="row">
+				<div class="intro">
+					<h2>Подберите лучший дом для отдыха на Самуи</h2>
+					<div class="form clearfix">
+						<form action="" class="filter">
+							<div class="col-md-3">
+								<div class="min">
+									<label for="min">от</label>
+									<input type="text" placeholder="0" id="min">
+								</div>
+								<div class="max">
+									<label for="max">до</label>
+									<input type="text" placeholder="5" id="max">
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="area">
+									<label for="area">Район</label>
+									<select name="" id="area">
+										<option value="">Бан Тай</option>
+										<option value="">Банг По</option>
+										<option value="">Сильвер Бич</option>
+										<option value="">Липа Ной</option>
+										<option value="">Талинг Нам</option>
+										<option value="">Чавенг</option>
+										<option value="">Чонг Мон</option>
+									</select>
+								</div>
+								<div class="number-of-bedrooms">
+									<label for=""> Количество спален
+									</label>
+									<input type="checkbox" name="" id="one">
+									<label for="one">1</label>
+									<input type="checkbox" name="" id="two">
+									<label for="two">2</label>
+									<input type="checkbox" name="" id="three">
+									<label for="three">3</label>
+									<input type="checkbox" name="" id="four">
+									<label for="four">4</label>
+									<input type="checkbox" name="" id="five">
+									<label for="five">5</label>
+									<input type="checkbox" name="" id="six">
+									<label for="six">6</label>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="beach-distance">
+									<label for="">Расстоние до пляжа</label>
+									<select name="" id="">
+										<option value="">Первая линия </option>
+										<option value="">До 1000 метров</option>
+										<option value="">До 3000 метров</option>
+									</select>
+								</div>
+								<div class="pool">
+									<label for="">Бассейн</label>
+									<select name="" id="">
+										<option value="">Общий</option>
+										<option value="">Приватный</option>
+									</select>
+								</div>
+							</div>
+							<div class="col-md-1">
+								<button type="button">Найти</button>
+							</div>
+						</form>
+					</div>
+				</div>
+				<div class="cards">
+					<div class="col-md-3"></div>
+					<div class="col-md-3"></div>
+					<div class="col-md-3"></div>
+					<div class="col-md-3"></div>
+				</div>
+			</div>
+		</div>
+	</main>
 	<!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
 	<script src="libs/html5shiv/html5shiv.min.js"></script>
