--- a/index.html
+++ b/index.html
@@ -223,6 +223,26 @@
 			</div>
 		</div>
 	</main>
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6"><span>О нас</span>
+					<p>Компания Villa on Samui предоставляет услуги по аренде и продаже недвижимости на острове Самуи.</p>
+					<div class="social">
+						<a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
+						<a href=""><i class="fa fa-vk" aria-hidden="true"></i></a>
+						<a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+					</div>
+				</div>
+				<div class="col-md-6"><span>Свяжитесь с нами</span>
+					<p><i></i></p>
+					<p><i></i></p>
+					<p><i></i></p>
+					<p><i></i></p>
+				</div>
+			</div>
+		</div>
+	</footer>
 	<!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
 	<script src="libs/html5shiv/html5shiv.min.js"></script>
