--- a/index.html
+++ b/index.html
@@ -134,91 +134,94 @@
 					</div>
 				</div>
 				<div class="cards">
-					<div class="col-md-3">
-						<div class="card">
-							<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
-							<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
-							<div class="icons-span">
-								<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
-								<span>2 <i class="fa fa-bath fa-2x" aria-hidden="true"></i></span>
-								<span><i class="fa fa-car fa-2x" aria-hidden="true"></i></span>
+					<div class="clearfix">
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
+								<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
+								<div class="icons-span">
+									<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
+									<span>2 <i class="fa fa-bath fa-2x" aria-hidden="true"></i></span>
+									<span><i class="fa fa-car fa-2x" aria-hidden="true"></i></span>
+								</div>
+								<div class="price-and-area-card clearfix"><span class="price">20000</span><span>THB</span><span class="area-card">Маенам</span></div>
 							</div>
-							<div class="price-and-area-card clearfix"><span class="price">20000</span><span>THB</span><span class="area-card">Маенам</span></div>
+						</div>
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
+								<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
+								<div class="icons-span">
+									<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
+									<span>2 <i class="fa fa-bath fa-2x" aria-hidden="true"></i></span>
+									<span><i class="fa fa-car fa-2x" aria-hidden="true"></i></span>
+								</div>
+								<div class="price-and-area-card clearfix"><span class="price">20000</span><span>THB</span><span class="area-card">Маенам</span></div>
+							</div>
+						</div>
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
+								<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
+								<div class="icons-span">
+									<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
+									<span>2 <i class="fa fa-bath fa-2x" aria-hidden="true"></i></span>
+									<span><i class="fa fa-car fa-2x" aria-hidden="true"></i></span>
+								</div>
+								<div class="price-and-area-card clearfix"><span class="price">20000</span><span>THB</span><span class="area-card">Маенам</span></div>
+							</div>
+						</div>
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
+								<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
+								<div class="icons-span">
+									<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
+									<span>2 <i class="fa fa-bath fa-2x" aria-hidden="true"></i></span>
+									<span><i class="fa fa-car fa-2x" aria-hidden="true"></i></span>
+								</div>
+								<div class="price-and-area-card clearfix"><span class="price">20000</span><span>THB</span><span class="area-card">Маенам</span></div>
+							</div>
 						</div>
 					</div>
-					<div class="col-md-3">
-						<div class="card">
-							<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
-							<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
-							<div class="icons-span">
-								<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
-								<span>2 <i class="fa fa-bath fa-2x" aria-hidden="true"></i></span>
-								<span><i class="fa fa-car fa-2x" aria-hidden="true"></i></span>
+					<div class="clearfix">
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
+								<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
+								<div class="icons-span">
+									<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
+									<span>2 <i class="fa fa-bath fa-2x" aria-hidden="true"></i></span>
+									<span><i class="fa fa-car fa-2x" aria-hidden="true"></i></span>
+								</div>
+								<div class="price-and-area-card clearfix"><span class="price">20000</span><span>THB</span><span class="area-card">Маенам</span></div>
 							</div>
-							<div class="price-and-area-card clearfix"><span class="price">20000</span><span>THB</span><span class="area-card">Маенам</span></div>
+						</div>
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
+								<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
+								<div class="icons-span">
+									<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
+									<span>2 <i class="fa fa-bath fa-2x" aria-hidden="true"></i></span>
+									<span><i class="fa fa-car fa-2x" aria-hidden="true"></i></span>
+								</div>
+								<div class="price-and-area-card clearfix"><span class="price">20000</span><span>THB</span><span class="area-card">Маенам</span></div>
+							</div>
+						</div>
+						<div class="col-md-3">
+							<div class="card">
+								<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
+								<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
+								<div class="icons-span">
+									<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
+									<span>2 <i class="fa fa-bath fa-2x" aria-hidden="true"></i></span>
+									<span><i class="fa fa-car fa-2x" aria-hidden="true"></i></span>
+								</div>
+								<div class="price-and-area-card clearfix"><span class="price">20000</span><span>THB</span><span class="area-card">Маенам</span></div>
+							</div>
 						</div>
 					</div>
-					<div class="col-md-3">
-						<div class="card">
-							<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
-							<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
-							<div class="icons-span">
-								<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
-								<span>2 <i class="fa fa-bath fa-2x" aria-hidden="true"></i></span>
-								<span><i class="fa fa-car fa-2x" aria-hidden="true"></i></span>
-							</div>
-							<div class="price-and-area-card clearfix"><span class="price">20000</span><span>THB</span><span class="area-card">Маенам</span></div>
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div class="card">
-							<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
-							<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
-							<div class="icons-span">
-								<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
-								<span>2 <i class="fa fa-bath fa-2x" aria-hidden="true"></i></span>
-								<span><i class="fa fa-car fa-2x" aria-hidden="true"></i></span>
-							</div>
-							<div class="price-and-area-card clearfix"><span class="price">20000</span><span>THB</span><span class="area-card">Маенам</span></div>
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div class="card">
-							<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
-							<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
-							<div class="icons-span">
-								<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
-								<span>2 <i class="fa fa-bath fa-2x" aria-hidden="true"></i></span>
-								<span><i class="fa fa-car fa-2x" aria-hidden="true"></i></span>
-							</div>
-							<div class="price-and-area-card clearfix"><span class="price">20000</span><span>THB</span><span class="area-card">Маенам</span></div>
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div class="card">
-							<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
-							<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
-							<div class="icons-span">
-								<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
-								<span>2 <i class="fa fa-bath fa-2x" aria-hidden="true"></i></span>
-								<span><i class="fa fa-car fa-2x" aria-hidden="true"></i></span>
-							</div>
-							<div class="price-and-area-card clearfix"><span class="price">20000</span><span>THB</span><span class="area-card">Маенам</span></div>
-						</div>
-					</div>
-					<div class="col-md-3">
-						<div class="card">
-							<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
-							<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
-							<div class="icons-span">
-								<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
-								<span>2 <i class="fa fa-bath fa-2x" aria-hidden="true"></i></span>
-								<span><i class="fa fa-car fa-2x" aria-hidden="true"></i></span>
-							</div>
-							<div class="price-and-area-card clearfix"><span class="price">20000</span><span>THB</span><span class="area-card">Маенам</span></div>
-						</div>
-					</div>
-
 				</div>
 			</div>
 		</div>
