--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="col-md-3 "><i class="fa fa-skype fa-2x" aria-hidden="true"></i><span>villaonsamui</span></div>
                     <div class="col-md-3 "><i class="fa fa-envelope fa-2x" aria-hidden="true"></i><span>rent@villaonsamui.ru</span></div>
                     <div class="col-md-2 "><span><a href="">RU</a></span><span><a href="">ENG</a></span></div>
-                    <div class="col-md-1 "><a href=""><i class="fa fa-home fa-2x" aria-hidden="true"></i></a></div>
+                    <div class="col-md-1 "><a href=""><i class="fa fa-sign-in fa-2x" aria-hidden="true"></i></a></div>
                 </div>
                 <div class="bottom-header clearfix">
                     <div class="col-md-1">
@@ -221,6 +221,54 @@
                                 <div class="price-and-area-card clearfix"><span class="price">20000</span><span>THB</span><span class="area-card">Маенам</span></div>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <hr>
+                </div>
+                <div class="col-md-12">
+                    <div class="paginator clearfix">
+                        <ul>
+                            <li><a href="">1</a></li>
+                            <li><a href="">2</a></li>
+                            <li><a href="">3</a></li>
+                            <li><a href="">4</a></li>
+                            <li><a href="">5</a></li>
+                            <li><a href="">19</a></li>
+                            <li><a href="">Next</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="features clearfix">
+                    <div class="col-md-3">
+                        <i class="fa fa-home fa-2x" aria-hidden="true"></i>
+                        <span>Жилье</span>
+                        <span>В базе более пятисот домов</span>
+                    </div>
+                    <div class="col-md-3">
+                        <i class="fa fa-area-chart fa-2x" aria-hidden="true"></i>
+                        <span>Культурный отдых</span>
+                        <span>Мы предлагаем классные экскурсии</span>
+                    </div>
+                    <div class="col-md-3">
+                        <i class="fa fa-car fa-2x" aria-hidden="true"></i>
+                        <span>Аренда</span>
+                        <span>У нас есть байки и авто</span>
+                    </div>
+                    <div class="col-md-3">
+                        <i class="fa fa-thumbs-o-up fa-2x" aria-hidden="true"></i>
+                        <span>Сопровождение</span>
+                        <span>Персональное</span>
+                    </div>
+                </div>
+                <div class="quotes clearfix">
+                    <div class="col-md-6">
+                        <img src="img/quote-img-1.jpg" alt="">
+                        <p><i class="fa fa-quote-left fa-2x" aria-hidden="true"></i>Ребята молодцы, нашли нам офигенное жилье за один день, спасибо что устроили нам хороший отдых Пусть сбывается задуманное, получается начатое, развивайте идеи для отдыха, дерзайте, творите! Надеюсь, ещё будет встреча!<i class="fa fa-quote-right fa-2x" aria-hidden="true"></i></p>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="img/quote-img-2.jpg" alt="">
+                        <p><i class="fa fa-quote-left fa-2x" aria-hidden="true"></i>Вы просто супер! Сэкономили нам и деньги, и время. Спасибо Вам огромное! Теперь будем только с Вами! Так же рекомендую Вас всем своим друзьям, знакомым! Рады, что вы у нас появились<i class="fa fa-quote-right fa-2x" aria-hidden="true"></i></p>
                     </div>
                 </div>
             </div>
