--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 					<div class="col-md-3 col-xs-4"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i><span>+66 97 3412804</span></div>
 					<div class="col-md-3 col-xs-4"><i class="fa fa-skype fa-2x" aria-hidden="true"></i><span>villaonsamui</span></div>
 					<div class="col-md-3 col-xs-4"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i><span>rent@villaonsamui.ru</span></div>
-					<div class="col-md-2 hidden-xs hidden-sm"><span><a href="">RU</a></span><span><a href="">ENG</a></span></div>
-					<div class="col-md-1 hidden-xs hidden-sm"><a href=""><i class="fa fa-sign-in fa-2x" aria-hidden="true"></i></a></div>
+					<div class="language clearfix">
+						<div class="col-md-2"><span><a href="">RU</a></span><span><a href="">ENG</a></span></div>
+						<div class="col-md-1"><a href=""><i class="fa fa-sign-in fa-2x" aria-hidden="true"></i></a></div>
+					</div>
 				</div>
-				<div class="hidden-lg hidden-md col-sm-12 col-xs-12 hidden-language clearfix"><span><a href="">RU</a></span><span><a href="">ENG</a></span>
-					<a href=""><i class="fa fa-sign-in fa-2x" aria-hidden="true"></i></a></div>
 				<div class="bottom-header clearfix">
 					<div class="col-md-1">
-						<div class="logo"><img src="/img/logo.png" alt=""></div>
+						<div class="logo"><img src="img/logo.png" alt=""></div>
 					</div>
 					<div class="col-md-5">
 						<h1>Аренда и продажа домов, вилл, апартаментов на Самуи.</h1>
@@ -139,7 +139,7 @@
 					<div class="clearfix">
 						<div class="col-md-3">
 							<div class="card">
-								<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
+								<div class="card-img-wrapper"><img src="img/card-img.jpg" alt=""><a href="inner.html">Подробнее</a></div>
 								<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
 								<div class="icons-span">
 									<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
@@ -151,7 +151,7 @@
 						</div>
 						<div class="col-md-3">
 							<div class="card">
-								<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
+								<div class="card-img-wrapper"><img src="img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
 								<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
 								<div class="icons-span">
 									<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
@@ -163,7 +163,7 @@
 						</div>
 						<div class="col-md-3">
 							<div class="card">
-								<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
+								<div class="card-img-wrapper"><img src="img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
 								<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
 								<div class="icons-span">
 									<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
@@ -175,7 +175,7 @@
 						</div>
 						<div class="col-md-3">
 							<div class="card">
-								<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
+								<div class="card-img-wrapper"><img src="img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
 								<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
 								<div class="icons-span">
 									<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
@@ -189,7 +189,7 @@
 					<div class="clearfix">
 						<div class="col-md-3">
 							<div class="card">
-								<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
+								<div class="card-img-wrapper"><img src="img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
 								<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
 								<div class="icons-span">
 									<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
@@ -201,7 +201,7 @@
 						</div>
 						<div class="col-md-3">
 							<div class="card">
-								<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
+								<div class="card-img-wrapper"><img src="img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
 								<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
 								<div class="icons-span">
 									<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
@@ -213,7 +213,7 @@
 						</div>
 						<div class="col-md-3">
 							<div class="card">
-								<div class="card-img-wrapper"><img src="/img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
+								<div class="card-img-wrapper"><img src="img/card-img.jpg" alt=""><a href="">Подробнее</a></div>
 								<p><a href="">Аренда односпальной виллы рядом с пляжем Ламай</a></p>
 								<div class="icons-span">
 									<span>3 <i class="fa fa-bed fa-2x" aria-hidden="true"></i></span>
@@ -223,6 +223,7 @@
 								<div class="price-and-area-card clearfix"><span class="price">20000</span><span>THB</span><span class="area-card">Маенам</span></div>
 							</div>
 						</div>
+						<!--						<div id="top"><span><i class="fa fa-arrow-circle-up fa-3x" aria-hidden="true"></i></span></div>-->
 					</div>
 				</div>
 				<div class="col-md-12">
