--- a/inner.html
+++ b/inner.html
@@ -7,148 +7,181 @@
 <!--<![endif]-->
 
 <head>
-	<meta charset="utf-8" />
-	<title>Заголовок</title>
-	<meta name="description" content="" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="shortcut icon" href="favicon.png" />
-	<link rel="stylesheet" href="libs/bootstrap/bootstrap-grid-3.3.1.min.css" />
-	<link rel="stylesheet" href="libs/font-awesome-4.7.0/css/font-awesome.min.css" />
-	<link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css" />
-	<link rel="stylesheet" href="libs/owl-carousel/owl.carousel.css" />
-	<link rel="stylesheet" href="libs/countdown/jquery.countdown.css" />
-	<link rel="stylesheet" href="css/fonts.css" />
-	<link rel="stylesheet" href="css/main.css" />
-	<link rel="stylesheet" href="css/media.css" />
-	<link rel="stylesheet" href="libs/slick/slick.css">
-	<link rel="stylesheet" href="libs/slick/slick-theme.css">
+    <meta charset="utf-8" />
+    <title>Заголовок</title>
+    <meta name="description" content="" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="favicon.png" />
+    <link rel="stylesheet" href="libs/bootstrap/bootstrap-grid-3.3.1.min.css" />
+    <link rel="stylesheet" href="libs/font-awesome-4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css" />
+    <link rel="stylesheet" href="libs/owl-carousel/owl.carousel.css" />
+    <link rel="stylesheet" href="libs/countdown/jquery.countdown.css" />
+    <link rel="stylesheet" href="css/fonts.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/media.css" />
+    <link rel="stylesheet" href="libs/slick/slick.css">
+    <link rel="stylesheet" href="libs/slick/slick-theme.css">
 </head>
 
 <body>
-	<header>
-		<div class="container">
-			<div class="row">
-				<div class="top-header clearfix">
-					<div class="col-md-3 col-xs-4"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i><span>+66 97 3412804</span></div>
-					<div class="col-md-3 col-xs-4"><i class="fa fa-skype fa-2x" aria-hidden="true"></i><span>villaonsamui</span></div>
-					<div class="col-md-3 col-xs-4"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i><span>rent@villaonsamui.ru</span></div>
-					<div class="language clearfix">
-						<div class="col-md-2"><span><a href="">RU</a></span><span><a href="">ENG</a></span></div>
-						<div class="col-md-1"><a href=""><i class="fa fa-sign-in fa-2x" aria-hidden="true"></i></a></div>
-					</div>
-				</div>
-				<div class="bottom-header clearfix">
-					<div class="col-md-1">
-						<div class="logo"><img src="img/logo.png" alt=""></div>
-					</div>
-					<div class="col-md-5">
-						<h1>Аренда и продажа домов, вилл, апартаментов на Самуи.</h1>
-					</div>
-					<div class="col-md-6 col-sm-12">
-						<nav>
-							<ul>
-								<li><a href="">О нас</a></li>
-								<li><a href="">Аренда</a></li>
-								<li><a href="">Продажа</a></li>
-								<li class="button"><a href="#">Сопровождение на Самуи</a>
-									<ul class="inner-list">
-										<li><a href="">Аренда байка</a></li>
-										<li><a href="">Аренда авто</a></li>
-										<li><a href="">Экскурсии</a></li>
-										<li><a href="">Статьи</a></li>
-									</ul>
-								</li>
-								<li><a href="">Контакты</a></li>
-							</ul>
-						</nav>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
-	<main>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8">
-					<div class="slider-wrapper">
-						<button class="prev"><i class="fa fa-angle-left fa-3x" aria-hidden="true"></i></button>
-						<button class="next"><i class="fa fa-angle-right fa-3x" aria-hidden="true"></i></button>
-						<div class="slider single-item">
-							<!--				<div class="slick-list draggable" aria-live="polite">-->
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="top-header clearfix">
+                    <div class="col-md-3 col-xs-4"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i><span>+66 97 3412804</span></div>
+                    <div class="col-md-3 col-xs-4"><i class="fa fa-skype fa-2x" aria-hidden="true"></i><span>villaonsamui</span></div>
+                    <div class="col-md-3 col-xs-4"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i><span>rent@villaonsamui.ru</span></div>
+                    <div class="language clearfix">
+                        <div class="col-md-2"><span><a href="">RU</a></span><span><a href="">ENG</a></span></div>
+                        <div class="col-md-1"><a href=""><i class="fa fa-sign-in fa-2x" aria-hidden="true"></i></a></div>
+                    </div>
+                </div>
+                <div class="bottom-header clearfix">
+                    <div class="col-md-1">
+                        <div class="logo"><img src="img/logo.png" alt=""></div>
+                    </div>
+                    <div class="col-md-5">
+                        <h1>Аренда и продажа домов, вилл, апартаментов на Самуи.</h1>
+                    </div>
+                    <div class="col-md-6 col-sm-12">
+                        <nav>
+                            <ul>
+                                <li><a href="">О нас</a></li>
+                                <li><a href="">Аренда</a></li>
+                                <li><a href="">Продажа</a></li>
+                                <li class="button"><a href="#">Сопровождение на Самуи</a>
+                                    <ul class="inner-list">
+                                        <li><a href="">Аренда байка</a></li>
+                                        <li><a href="">Аренда авто</a></li>
+                                        <li><a href="">Экскурсии</a></li>
+                                        <li><a href="">Статьи</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="">Контакты</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="slider-wrapper">
+                        <button class="prev"><i class="fa fa-angle-left fa-3x" aria-hidden="true"></i></button>
+                        <button class="next"><i class="fa fa-angle-right fa-3x" aria-hidden="true"></i></button>
+                        <div class="slider single-item">
+                            <!--				<div class="slick-list draggable" aria-live="polite">-->
                             <div><img src="img/first.jpg" alt=""></div>
                             <div><img src="img/second.jpg" alt=""></div>
                             <div><img src="img/first.jpg" alt=""></div>
                             <div><img src="img/second.jpg" alt=""></div>
                             <div><img src="img/first.jpg" alt=""></div>
                             <div><img src="img/second.jpg" alt=""></div>
-							<!--    </div>-->
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="right-product-column">
-						<p>Понравился дом?
-							<br>Напишите нам</p>
-						<form action="" class="write-me">
-							<input type="text" placeholder="Ваш E-mail или телефон">
-							<textarea name="" id="" placeholder="Сообщение"></textarea>
-							<button>Отправить сообщение</button>
-						</form>
-						<hr>
-					</div>
+                            <!--    </div>-->
+                        </div>
+                    </div>
+                    <div class="product-information">
+                        <h1>Аренда 5 спальной виллы на Самуи с великолепным видом на Море</h1>
+                        <p>Вилла с 5 спальнями расположена на склоне холма с потрясающим видом на море в районе бан тай на северо-западном побережье острова Самуи. Вилла располагает великолепным бассейном инфинити, впечатляющим водопадом и большой солнечной террасой.</p>
+                        <p>Простор и инновационная планировка виллы сделает незабываемым тропический отдых для больших семей и супружеских пар, которые ценят конфиденциальность. Как только вы шаг внутри Вилла Maphraaw становится очевидным, что данный объект был спроектирован, построен и меблирован по высоким стандартам. Удобный большой крытой паркинг для машины расположился у входа на виллу, за которой вы найдете уникальные пышные тропические сады и очаровательный декоративный пруд. Потрясающий дизайн интерьера создается из натуральных тканей. Все спальни имеют ванные комнаты, четыре из которых имеют великолепный вид на тропический лес, море.</p>
+                        <p>На первом этаже виллы, с её сводчатыми потолками, представляет собой идеальное сочетание современной роскоши и тропической элегантности. Западная кухня открытого плана со стильной черной гранитной столешницей, элегантные деревянные шкафы и всеми удобствами. За кухней находится просторная гостиная открытого плана, с которой открываются потрясающие виды на тропический лес, море и остров Панган, который может быть оценен во время отдыха в одном из роскошных и комфортабельных диванов. Столовая открытого плана предлагает гостям возможность понежиться невероятными видами во время трапезы. За элегантным деревянным обеденным столом могут разместиться до восьми гостей, внешний вид с террасы является идеальным местом, чтобы расслабиться с коктейлем и полюбоваться на закат. За столовой находится гостиная с удобными креслами и панорамным видом на Море. Здесь можно отдохнуть, расслабиться и снять стресс после обыденной жизни.</p>
+                        <p>От первого уровня вниз на второй уровень ведет лестница, который имеет три спальни с ванными комнатами. Спальня со вкусом мебелирована, здесь вы найдете удобную кровать размера Кинг-сайз, просторную гардеробную и выход на террасу с бассейном. В роскошной ванной комнате двойная раковина, тропический душ и ванна. Вторая мебелированная спальня на противоположной стороне виллы имеет большую удобную кровать, ванную комнату с тропическим душем и террасой с бассейном. Третья спальня находится в задней части этого уровня и имеет большую гардеробную, двуспальную кровать и роскошную ванную комнату с двумя раковинами, тропическим душем и ванной.</p>
+                        <p>На нижнем третьем уровне виллы находятся еще две спальни с ванными комнатами. Обе имеют очень большие гардеробные, одна с двуспальной кроватью, другая с двумя односпальными кроватями. Бассейн-Инфинити, на уровень выше. Этот бассейн создает незабываемые впечатления, можно просто поплавать с видом на роскошные тропические леса. На террасе также расположена роскошная мебель, чтобы гости могли отдохнуть и расслабиться.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="right-product-column">
+                        <div class="main-characteristics">
+                            <h2>Основные характеристики</h2>
+                            <div class="characteristics-item"><span>Тип дома:</span> <span>Вилла</span></div>
+                            <div class="characteristics-item"><span>Спален:</span> <span>5</span></div>
+                            <div class="characteristics-item"><span>Ванных комнат:</span> <span>5</span></div>
+                            <div class="characteristics-item"><span>Вид:</span> <span>с видом на море</span></div>
+                            <div class="characteristics-item"><span>До пляжа:</span> <span>100м</span></div>
+                            <div class="characteristics-item"><span>Бассейн:</span> <span>2</span></div>
+                            <div class="characteristics-item"><span>Электричество:</span> <span>+</span></div>
+                            <div class="characteristics-item"><span>Вода:</span> <span>+</span></div>
+                            <div class="characteristics-item"><span>Площадь дома:</span> <span>1000 м<sup>2</sup></span></div>
+                            <div class="characteristics-item"><span>Год постройки:</span> <span>2000</span></div>
+                            <div class="characteristics-item"><span>Парковочных мест:</span> <span>1</span></div>
+                            <div class="characteristics-item"><span>Площадь территории:</span> <span>1000 м<sup>2</sup></span></div>
+                            <div class="characteristics-item"><span>Депозит:</span> <span>100000</span></div>
+                            <div class="characteristics-item"><span>Цена за месяц:</span> <span>100000</span></div>
+                            <div class="characteristics-item"><span>Цена за ночь:</span> <span>100000</span></div>
+                            <div class="characteristics-item"><span>ID:</span> <span>111</span></div>
+                            <div class="special-offer">
+                                <h2>При бронировании этой виллы вы получаете следующие скидки:</h2>
+                                <p>10% на аренду автомобиля на нашем сайте.
+                                    <br>10% на фотосессию от профессионала.
+                                    <br> 10% на экскурсии от нашей компании.</p>
+                            </div>
+                        </div>
+                        <p>Понравился дом?
+                            <br>Напишите нам</p>
+                        <form action="" class="write-me">
+                            <input type="text" placeholder="Ваш E-mail или телефон">
+                            <textarea name="" id="" placeholder="Сообщение"></textarea>
+                            <button>Отправить сообщение</button>
+                        </form>
+                        <hr>
+                    </div>
 
-				</div>
-			</div>
-		</div>
-	</main>
-	<footer>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6"><span>О нас</span>
-					<p>Компания Villa on Samui предоставляет услуги по аренде и продаже недвижимости на острове Самуи.</p>
-					<div class="social clearfix">
-						<a href=""><i class="fa fa-facebook fa-2x" aria-hidden="true" ></i></a>
-						<a href=""><i class="fa fa-vk fa-2x" aria-hidden="true" ></i></a>
-						<a href=""><i class="fa fa-instagram fa-2x" aria-hidden="true" ></i></a>
-					</div>
-				</div>
-				<div class="col-md-6">
-					<div class="right-footer"><span>Свяжитесь с нами</span>
-						<p><i class="fa fa-university" aria-hidden="true"></i>4578 Samui Road, D04 89GR
-							<br>
-							<i class="fa fa-phone" aria-hidden="true"></i>+66 973 412804
-							<br>
-							<i class="fa fa-envelope-o" aria-hidden="true"></i> rent@villaonsamui.ru
-							<br>
-							<i class="fa fa-calendar" aria-hidden="true"></i>Мы работаем 24/7</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
-	<!--[if lt IE 9]>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6"><span>О нас</span>
+                    <p>Компания Villa on Samui предоставляет услуги по аренде и продаже недвижимости на острове Самуи.</p>
+                    <div class="social clearfix">
+                        <a href=""><i class="fa fa-facebook fa-2x" aria-hidden="true" ></i></a>
+                        <a href=""><i class="fa fa-vk fa-2x" aria-hidden="true" ></i></a>
+                        <a href=""><i class="fa fa-instagram fa-2x" aria-hidden="true" ></i></a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="right-footer"><span>Свяжитесь с нами</span>
+                        <p><i class="fa fa-university" aria-hidden="true"></i>4578 Samui Road, D04 89GR
+                            <br>
+                            <i class="fa fa-phone" aria-hidden="true"></i>+66 973 412804
+                            <br>
+                            <i class="fa fa-envelope-o" aria-hidden="true"></i> rent@villaonsamui.ru
+                            <br>
+                            <i class="fa fa-calendar" aria-hidden="true"></i>Мы работаем 24/7</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
 	<script src="libs/html5shiv/html5shiv.min.js"></script>
 	<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
 	<script src="libs/respond/respond.min.js"></script>
 	<![endif]-->
-	<script src="libs/jquery/jquery-3.1.1.min.js"></script>
-	<script src="libs/jquery-mousewheel/jquery.mousewheel.min.js"></script>
-	<script src="libs/fancybox/jquery.fancybox.pack.js"></script>
-	<script src="libs/waypoints/waypoints-1.6.2.min.js"></script>
-	<script src="libs/scrollto/jquery.scrollTo.min.js"></script>
-	<script src="libs/owl-carousel/owl.carousel.min.js"></script>
-	<script src="libs/countdown/jquery.plugin.js"></script>
-	<script src="libs/countdown/jquery.countdown.min.js"></script>
-	<script src="libs/countdown/jquery.countdown-ru.js"></script>
-	<script src="libs/landing-nav/navigation.js"></script>
-	<script src="js/common.js"></script>
-	<script src="libs/slick/slick.min.js"></script>
-	<!-- Yandex.Metrika counter -->
-	<!-- /Yandex.Metrika counter -->
-	<!-- Google Analytics counter -->
-	<!-- /Google Analytics counter -->
+    <script src="libs/jquery/jquery-3.1.1.min.js"></script>
+    <script src="libs/jquery-mousewheel/jquery.mousewheel.min.js"></script>
+    <script src="libs/fancybox/jquery.fancybox.pack.js"></script>
+    <script src="libs/waypoints/waypoints-1.6.2.min.js"></script>
+    <script src="libs/scrollto/jquery.scrollTo.min.js"></script>
+    <script src="libs/owl-carousel/owl.carousel.min.js"></script>
+    <script src="libs/countdown/jquery.plugin.js"></script>
+    <script src="libs/countdown/jquery.countdown.min.js"></script>
+    <script src="libs/countdown/jquery.countdown-ru.js"></script>
+    <script src="libs/landing-nav/navigation.js"></script>
+    <script src="js/common.js"></script>
+    <script src="libs/slick/slick.min.js"></script>
+    <!-- Yandex.Metrika counter -->
+    <!-- /Yandex.Metrika counter -->
+    <!-- Google Analytics counter -->
+    <!-- /Google Analytics counter -->
 </body>
 
 </html>
