--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
 										<option value="">Приватный</option>
 									</select>
 								</div>
+								<div class="id">
+									<label for="id">ID</label>
+									<input type="number" id="id" placeholder="1">
+								</div>
 							</div>
 							<div class="col-md-1">
 								<button type="button">Найти</button>
